complete Java FFI + litdb POC